fix warnings on jdk 11.